[AccountApp] Delete Useing Memory.